# THU-ACP-19-21

Big Data/HW1/: BIG_DATA_HW1_2019280513.docx
Big Data/HW10/: BD_HW10_2019280513.docx
Big Data/HW2/: BD_HW2_2019280513.docx  page_rank.cpp
Big Data/HW5/: BD_HW5_2019280513.docx
Big Data/HW6/: System_Design_Reading_2019280513.docx
Big Data/HW8/: BD_HW8_GP_2019280513.docx
Big Data/HW9/: HW9_BD_2019280513.docx  Makefile
Big Data/bd_Final_Project_2019280513/: BD_Final_Project_2019280513.docx  pagerank.py  post_process.py  pre_process.py  trustrank.py  wl_postprocess.py
Computer Graphics/Final Projects/raytracing/: CMakeLists.txt  Ray_Tracing_2019280513.docx
Computer Graphics/Final Projects/raytracing/src/: light.cpp  main.cpp  primitive.cpp  raytracer.cpp
Computer Graphics/assignment2/: CG_HW2_2019280513.docx
Computer Graphics/assignment3/: CMakeLists.txt
Computer Graphics/assignment5/: CMakeLists.txt
Computer Graphics/assignment5/report and video/: CG_HW5_2019280513.docx  video.mov
Computer Graphics/assignment5/src/assignment5/: main.cpp
Computer Graphics/assignnment1/: CMakeLists.txt
Computer Graphics/assignnment1/Report and Video/: CG_HW1_2019280513.docx
Computer Graphics/assignnment1/src/assignment1/: homework1.cpp  hw1.frag1.glsl  hw1.vert1.glsl
Deep Learning/DL_HW1/: DL_HW1.ipynb  Untitled.ipynb
Deep Learning/DL_HW2/: DL_hw2_2019280513.docx
Deep Learning/DL_HW3/: DL_HW3_2019280513.docx  homework-3.html  homework-3.ipynb  optimizer.py
Deep Learning/DL_HW4/: Assignment 4 Pytorch.docx  CNN.html  CNN.ipynb  MLP.html  MLP.ipynb
Deep Learning/DL_HW5/: DL_HW5_2019280513.html  DL_HW5_2019280513.ipynb  DL_hw5_2019280513.docx
Deep Learning/DL_HW6/: DL_HW6_2019280513.docx  DL_HW6_2019280513.html
Machine Learning/ML_HW1/: ML_HW1_2019280513.docx  ML_HW1_Code_2019280513.ipynb
Machine Learning/ML_HW2/: HW2_ML_2019280513.docx  Value_Iteration.xlsx
Machine Learning/ML_HW3/: BatchNormalization.html  (+3 more)
(+220 files in other folders)
